--- a/caixinhas.html
+++ b/caixinhas.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/caixinhas.css">
+  <link rel="stylesheet" href="/frontend/css/base.css">
+
+  <link rel="stylesheet" href="/frontend/css/caixinhas.css">
 </head>
 <body>
 
@@ -47,6 +48,7 @@
   </div>
 
   <!-- JS -->
-  <script src="js/caixinhas.js" defer></script>
+  <script src="/frontend/js/caixinhas.js" defer></script>
 </body>
 </html>
+
