--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Controle Financeiro</title>
 
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/home.css" />
+  <link rel="manifest" href="frontend/manifest.json">
+  <link rel="stylesheet" href="frontend/css/base.css">
+  <link rel="stylesheet" href="frontend/css/home.css">
 </head>
 
 <body>
@@ -141,14 +141,15 @@
   <!-- =========================
        SCRIPTS
   ========================== -->
-  <script src="js/saldo.js"></script>
-  <script src="js/app.js"></script>
+  <script src="frontend/js/saldo.js" defer></script>
+  <script src="frontend/js/app.js" defer></script>
   <script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js")
-    .then(reg => console.log("SW registrado:", reg.scope))
-    .catch(err => console.error("SW falhou:", err));
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('front-end/service-worker.js')
+    .then(() => console.log('SW registrado'))
+    .catch(err => console.error('SW falhou:', err));
 }
+
 </script>
 
 
