Fix PWA manifest location

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Controle Financeiro</title>
 
-  <link rel="manifest" href="frontend/manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="frontend/css/base.css">
   <link rel="stylesheet" href="frontend/css/home.css">
 </head>
